# playGR

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: ci.yml
src/: debug.js  flow.js  grid.js  interaction.js  jets.js  main.js  persistence.js  physicsBridge.js  presets.js  renderer.js  scale.js  styles.css  ui.js
wasm/: Cargo.toml
wasm/src/: collisions.rs  constants.rs  integrator.rs  lib.rs  particle.rs  physics.rs  ring_buffer.rs  tests.rs  vec3.rs  world.rs
