[package]
name = "spacetime-sandbox"
version = "0.1.0"
edition = "2021"
authors = ["Lisen Kaci"]
description = "Strict-f64 Rust/WASM engine for Maxwell + Extended GEM (gravitoelectromagnetism) with Jefimenko / Lienard-Wiechert retarded potentials."
license = "MIT"
repository = "https://github.com/lisenkaci/PlayGR"
homepage = "https://github.com/lisenkaci/PlayGR#readme"
readme = "../README.md"
keywords = ["physics", "relativity", "gravitoelectromagnetism", "wasm", "simulation"]
categories = ["science", "simulation", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
